# claude-statusline-for-linux

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  statusline-command.py
.github/workflows/: ci.yml
claude_statusline/: cli.py  constants.py  formatters.py  models.py  parser.py  theme.py
tests/: test_statusline.py
